# TUKOREA_announce_watcher

./: .gitignore  README.md  pyproject.toml  start-watcher.cmd  start-watcher.ps1  status-watcher.cmd  status-watcher.ps1  stop-watcher.cmd  stop-watcher.ps1  watcher_config.example.json  watcher_config.json  watcher_ctl.py
announce_watcher/: __init__.py  app.py  config.py  engine.py  logging_utils.py  models.py  notifier.py  startup.py  storage.py  tray.py
announce_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
announce_watcher/sites/: authenticated_tukorea_board.py  base.py  playwright_login_board.py  sample.py  tukorea_board.py
tests/: test_app.py  test_config.py  test_engine.py  test_notifier.py  test_playwright_adapter.py  test_tukorea_board.py
